// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieSearchSwitch component should render correctly if genre is selected 1`] = `
<div
  className="switch-container d-flex align-items-center"
>
  <label
    className="switch-container-label my-0"
  >
    SEARCH BY
  </label>
  <div
    className="switch d-flex"
  >
    <button
      className="switch-item switch-item-left"
      onClick={[Function]}
      type="button"
    >
      Title
    </button>
    <button
      className="switch-item switch-item-right active"
      onClick={[Function]}
      type="button"
    >
      Genre
    </button>
  </div>
</div>
`;

exports[`MovieSearchSwitch component should render correctly if title is selected 1`] = `
<div
  className="switch-container d-flex align-items-center"
>
  <label
    className="switch-container-label my-0"
  >
    SEARCH BY
  </label>
  <div
    className="switch d-flex"
  >
    <button
      className="switch-item switch-item-left active"
      onClick={[Function]}
      type="button"
    >
      Title
    </button>
    <button
      className="switch-item switch-item-right"
      onClick={[Function]}
      type="button"
    >
      Genre
    </button>
  </div>
</div>
`;
